# lv_port_pc_vscode

./: .gitignore  CMakeLists.txt  lv_conf.h
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lvgl.sln  main.vcxproj  main.vcxproj.filters  run.vcxproj  run.vcxproj.filters
build_vs/lvgl/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  lvgl.pc  lvgl.vcxproj  lvgl.vcxproj.filters  lvgl_demos.vcxproj  lvgl_demos.vcxproj.filters  lvgl_examples.vcxproj  lvgl_examples.vcxproj.filters  lvgl_thorvg.vcxproj  lvgl_thorvg.vcxproj.filters
build_vs/lvgl/lvgl.dir/Debug/lvgl.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_vs/lvgl/lvgl_demos.dir/Debug/lvgl_demos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_vs/lvgl/lvgl_examples.dir/Debug/: lvgl_examples.lib.recipe
build_vs/lvgl/lvgl_examples.dir/Debug/lvgl_examples.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  lvgl_examples.lastbuildstate
build_vs/lvgl/lvgl_thorvg.dir/Debug/lvgl_thorvg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_vs/main.dir/Debug/: main.exe.recipe
build_vs/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main.lastbuildstate
build_vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.c
